using UnityEngine;

public class Boss : Enemy
{
    void Start() 
    {
        Debug.LogWarning("Boss not implemented, treating it as a normla enemy");
    }
    void PhaseTransition()
    {

    }

    void SpecialAttack()
    {
    }
}
